--- a/res/layout-sw600dp/fragment_knowledge.xml
+++ b/res/layout-sw600dp/fragment_knowledge.xml
@@ -2,16 +2,21 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/gridBackgroundColor"
     android:orientation="horizontal" >
 
     <GridView
         android:id="@+id/lvKnowledge"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:columnWidth="280dp"
-        android:numColumns="2"  android:background="@color/gridBackgroundColor"
-        android:verticalSpacing="@dimen/activity_vertical_margin" 
-        android:horizontalSpacing="@dimen/activity_vertical_margin"/>
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:background="@color/gridBackgroundColor"
+        android:columnWidth="187dp"
+        android:horizontalSpacing="15dp"
+        android:numColumns="3"
+        android:verticalSpacing="@dimen/activity_vertical_margin" />
 
     <LinearLayout
         android:id="@+id/progressInfo"
