--- a/res/layout-sw600dp/item_your_know.xml
+++ b/res/layout-sw600dp/item_your_know.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@drawable/round_border_phone"
+    android:layout_height="300dp"
+    android:background="@drawable/round_border"
     android:baselineAligned="false" >
 
     <FrameLayout
         android:id="@+id/layoutImage"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="151dp"
+        android:layout_height="151dp"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" >
+        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="18dp"
+        android:layout_marginRight="18dp" >
 
         <ImageView
             android:id="@+id/imgKnowledge"
@@ -28,22 +30,25 @@
 
     <TextView
         android:id="@+id/txtKnowName"
-        android:layout_width="match_parent"
+        android:layout_width="167dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/layoutImage"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:lines="2"
         android:paddingTop="@dimen/item_horizontal_margin"
         android:text="@string/subscribe_invalid_qrcode"
-        android:textColor="@color/know_name_gray" />
+        android:textColor="@color/know_name_gray"
+        android:textSize="16sp" />
 
     <TextView
         android:id="@+id/txtLastViewTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignRight="@id/txtKnowName"
-        android:layout_below="@+id/txtKnowName"
+        android:layout_below="@id/txtKnowName"
+        android:layout_marginBottom="10dp"
         android:maxLines="1"
-        android:textColor="@color/author_gray"
-        android:textSize="13sp" />
+        android:textColor="@color/author_gray" />
 
 </RelativeLayout>
