--- a/res/layout/fragment_knowledge.xml
+++ b/res/layout/fragment_knowledge.xml
@@ -1,15 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:background="@color/gridBackgroundColor"
+    android:orientation="horizontal" >
 
     <GridView
         android:id="@+id/lvKnowledge"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
         android:background="@color/gridBackgroundColor"
-        android:columnWidth="300dp"
-        android:numColumns="1"
+        android:columnWidth="100dp"
+        android:horizontalSpacing="5dp"
+        android:numColumns="3"
         android:verticalSpacing="@dimen/activity_vertical_margin" />
 
     <LinearLayout
