--- a/res/layout-land/fragment_subscribe.xml
+++ b/res/layout-land/fragment_subscribe.xml
@@ -4,10 +4,10 @@
     android:layout_height="match_parent" >
 
     <RelativeLayout
-        android:layout_width="300dp"
-        android:layout_height="404dp"
+        android:layout_width="570dp"
+        android:layout_height="250dp"
         android:layout_centerInParent="true"
-        android:background="@drawable/subscribe_bg"
+        android:background="@drawable/subscribe_bg_land"
         android:orientation="vertical" >
 
         <TextView
@@ -21,10 +21,10 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_above="@id/txtOR"
+            android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
+            android:layout_toLeftOf="@id/txtOR"
             android:orientation="vertical" >
 
             <TextView
@@ -56,6 +56,7 @@
                 android:id="@+id/btnSubscribe"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="15dp"
                 android:layout_marginLeft="@dimen/activity_horizontal_margin"
                 android:layout_marginRight="@dimen/activity_horizontal_margin"
                 android:text="@string/subscribe" />
@@ -65,11 +66,10 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
             android:layout_alignParentRight="true"
-            android:layout_below="@id/txtOR"
-            android:orientation="vertical"
-            android:paddingBottom="20dp" >
+            android:layout_alignParentTop="true"
+            android:layout_toRightOf="@id/txtOR"
+            android:orientation="vertical" >
 
             <TextView
                 android:id="@+id/txtQRDesc"
@@ -83,8 +83,8 @@
                 android:textSize="20sp" />
 
             <ImageView
-                android:layout_width="70dp"
-                android:layout_height="70dp"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
                 android:layout_gravity="center"
                 android:contentDescription="@string/empty"
                 android:src="@drawable/oneknow_qr" />
@@ -93,6 +93,7 @@
                 android:id="@+id/btnQRCode"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="15dp"
                 android:layout_marginLeft="@dimen/activity_horizontal_margin"
                 android:layout_marginRight="@dimen/activity_horizontal_margin"
                 android:text="@string/subscribe_scan_qr_code" />
