--- a/res/layout/activity_search_result.xml
+++ b/res/layout/activity_search_result.xml
@@ -2,10 +2,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".SearchResultActivity" >
 
     <TextView
@@ -14,15 +10,21 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:textSize="20sp"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginTop="@dimen/activity_vertical_margin"    
+        android:textColor="@android:color/darker_gray"
         android:textStyle="bold" />
-
+    
     <TextView
-        android:id="@+id/search_result_count"
+        android:id="@+id/search_count"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true" />
+        android:layout_alignParentTop="true"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
+        android:layout_marginTop="@dimen/activity_vertical_margin"    
+        android:textColor="@android:color/darker_gray"
+        android:textStyle="bold" />
 
     <FrameLayout
         android:id="@+id/search_container"
